--- a/music-master/src/App.css
+++ b/music-master/src/App.css
@@ -22,6 +22,9 @@ body {
 .profile-info{
   margin-left:10px;
   text-align:left;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 
@@ -39,4 +42,34 @@ body {
 
 .profile-followers, .profile-genres{
   font-size: 18px;
+}
+
+.track {
+  width:220px;
+  height:220px;
+  display: inline-block;
+  margin: 10px;
+  text-align: left;
+  cursor:pointer;
+  position: relative;
+}
+
+.track-img {
+  width: 220px;
+  height:220px;
+  border: 3px solid #FFF;
+  object-fit: cover;
+  position: absolute;
+}
+
+.track-text{
+  background-color: black;
+  color: white;
+  opacity: 0.75;
+  width: 214px;
+  text-align: center;
+  position: absolute;
+  margin-left: 3px;
+  bottom: 0;
+  padding: 10px;
 }
